# panitascraper

./: .env.example  .gitignore  Dockerfile  alembic.ini  celeryconfig.py  docker-compose.prod.yml  docker-compose.yml  models.py  pyproject.toml  requirements.txt  scrapy.cfg  tasks.py
alembic/: env.py
alembic/versions/: 0001_create_scraper_tables.py  0002_create_personas_table.py  0003_add_dado_de_alta_state.py  0004_add_missing_persona_columns.py  0005_add_cedula_validation_columns.py
panitascraper/: items.py  middlewares.py  settings.py
panitascraper/parsers/: __init__.py  aquiestoyvenezuela.py  base.py  busquedaunificadavzla.py  busquedavzla.py  busquedavzla_sheet.py  drive_sismo_vzla.py  encuentralos.py  hospitalesdevenezuela.py  localizadosvenezuela.py  localizapacientes.py  osirisberbesia.py  reencuentrohelp.py  reportevenezuela.py  runner.py  sismo_ehr.py  tebusco.py  ubicame.py  ucv_aparecidos.py
panitascraper/pipelines/: checksum.py  storage.py  transform.py
panitascraper/spiders/: aquiestoyvenezuela.py  base.py  buscar_cedula.py  busquedaunificadavzla.py  busquedavzla.py  busquedavzla_sheet.py  dateas_lookup.py  desaparecidos_terremoto.py  drive_sismo_vzla.py  encuentralos.py  hospital_json.py  localizapacientes.py  (+14 more)
scripts/: README.md  README_validacion_cedulas.md  data_quality_report.py  duplicate_confidence_report.py  field_integrity_report.py  fix_multipart_corruption.py  fix_name_variants.py  fonetica_es.py  import_csv_manual.py  la_guaira_raw.txt  preview_import_conflicts.py  scrape_target_cedulas.py  validate_cedulas.py  verify_block_coverage.py
(+2 files in other folders)
