[project]
name = "panitascraper"
version = "0.1.0"
description = "Web scraper for hospital/healthcare data with Scrapy, Celery, and S3/MinIO storage"
requires-python = ">=3.11"
dependencies = [
    "Scrapy>=2.12,<3",
    "scrapy-playwright>=0.0.40,<0.1",
    "celery>=5.4.0,<6",
    "redis>=5.0.4,<6",
    "crochet>=2.0.0,<3",
    "minio>=7.2.7,<8",
    "boto3>=1.34.131,<2",
    "SQLAlchemy>=2.0.30,<3",
    "psycopg2-binary>=2.9.9,<3",
    "alembic>=1.13.1,<2",
    "itemadapter>=0.9.0,<1",
    "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panitascraper"]

[tool.pytest.ini_options]
testpaths = ["panitascraper/tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
